syntax = "proto3";

enum CONNECTION_ACTION {
  UNKNOWN = 0;

  ERROR = 1;
  PING = 2;
  PONG = 3;
  ACCEPT = 4;
  CHALLENGE = 5;
  REJECT = 6;
  REDIRECT = 7;
  CLOSING = 8;
  CLOSED = 9;

  AUTHENTICATION_TIMEOUT = 100;
  INVALID_MESSAGE = 101;
}

message ConnectionMessage {
    required CONNECTION_ACTION action = 1;
    string data = 2;
    bool isError = 3;
    bool isAck = 4;

    string url = 5;
    string protocolVersion = 6;
  }
  