syntax = "proto3";

enum LOCK_ACTION {
  UNKNOWN = 0;
  ERROR = 1;
  REQUEST = 2;
  RESPONSE = 3;
  RELEASE = 4;
}

message LockMessage {
    required LOCK_ACTION action = 1;
    bool locked = 3;
}
  