syntax = "proto3";
syntax = "proto3";

enum MONITORING_ACTION {

}

message MonitoringMessage {
    required RPC_ACTION action = 1;
    string data = 2;
    string correlationId = 3;
    bool isError = 4;
    bool isAck = 5;
}
  